# lost-and-found

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  LICENSE  Overview.md  Possible Business Case.md  README.md  Tasks.md  package.json  playwright.config.ts  playwright_base_config.ts  playwright_setup_environment.ts  pyproject.toml  requirements.txt  tsconfig.json
.obsidian/: app.json  community-plugins.json  graph.json
analyze/: main.ipynb
deliverables/: Delivarables.md
deliverables/240310_Project Proposal/: Commitment_document_group_ExampleTeam.docx  Delivarables.md  Proposal_group_ExampleTeam.docx
deliverables/240310_Proposal & Commitment/: Commitment_document_group_ExampleTeam.md  Proposal_group_ExampleTeam.md
deliverables/ScientificReport/: Paper.md  paper.tex  references.bib  scientific_report.md  scientific_report.tex  scientific_report_test.aux  scientific_report_test.fdb_latexmk  scientific_report_test.fls  scientific_report_test.out  scientific_report_test.tex
deliverables/_Ideas/: Possible Business Case.md
dspro2/: README.md  country_mapper.py  countryconverter.py  data_loader.py  index.ts  region_enricher.py
dspro2/.obsidian/: workspace.json
dspro2/1_data collection/: data_loader.py  delete_leftover.sh  geoguessr.spec.ts  playwright.config.ts  playwright_base_config.ts  playwright_setup_environment.ts
dspro2/1_data_collection/: delete_leftover.sh  delete_non_complete.sh  geoguessr.spec.ts  import.sh  playwright.config.ts  playwright_base_config.ts  playwright_setup_environment.ts
dspro2/2_data_understanding/: README.md
dspro2/3_data preperation/: resize_images.ipynb
dspro2/4_modeling/: all_resnets_v0.ipynb  coordinate_handler.py  data_list  (+16 more)
notebooks/: main.ipynb  start.ipynb
scraping/: delete_leftover.sh  example.spec.ts  geoguessr.spec.ts
setup_environ/: setup_environ_and_eval.sh  setup_environ_and_eval_colab.ipynb  setup_environ_and_test.sh  setup_environ_and_test_colab.ipynb  setup_environ_and_train.sh  setup_environ_and_train_colab.ipynb
(+195 files in other folders)
