[tool.poetry]
name = "dspro2"
version = "0.1.0"
description = ""
authors = ["Linus Schlumberger <l@mll.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
pillow = "^10.2.0"
reverse-geocoder = "^1.5.1"
pycountry = "^23.12.11"
fuzzywuzzy = "^0.18.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
kaleido = "0.2.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
resnet-pytorch = "^0.2.0"
resnet = "^0.1"
bottleneck = "^1.3.8"
datasets = "^2.19.0"
wandb = "^0.16.6"
uuid = "^1.30"
gradio = "^4.31.4"
folium = "^0.16.0"
geojson = "^3.1.0"
geopandas = "^0.14.4"
python-levenshtein = "^0.25.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
jupyter = "^1.0.0"
notebook = "^7.1.0"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
